--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,11 @@
             <h2 class="text-light m-0 ml-2">Sip Out Loud</h2>
         </a>
 
-        <form class="d-flex">
-            <input class="form-control rounded-pill" type="search" placeholder="Search...">
-            <button class="btn btn-gold rounded-pill ms-2">Search</button>
+        <form class="d-flex" method="GET" action="{% url 'products' %}">
+            <input class="form-control rounded-pill" type="search" name="q" placeholder="Search...">
+            <button class="btn btn-gold rounded-pill ms-2" type="submit">Search</button>
         </form>
+        
         
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -51,6 +52,12 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-light contact-link" href="#contact">Contact Us</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'view_cart' %}">
+                            <i class="fas fa-shopping-cart"></i> Cart 
+                            <span class="badge bg-danger">{{ request.session.cart|length }}</span>
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item dropdown">
@@ -77,7 +84,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Total: 
+                        <a class="nav-link text-light" href="{% url 'view_bag' %}">Total: 
                             {% if grand_total %}
                                 €{{ grand_total|floatformat:2 }}
                             {% else %}
