--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
         </nav>
     </div>
     <div class="shipping text-center bg-white py-2">
-        Free shipping on orders over €{{ free_shipping_threshold }}!
+        Free shipping on orders over €{{ free_delivery_threshold }}!
     </div>
 </header>
 
