--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -87,7 +87,7 @@
                                     {% include "bag/quantity-form.html" %}
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0 text-gold">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                    {#<p class="my-0 text-gold">${{ item.product.price | calc_subtotal:item.quantity }}</p>#}
                                 </td>
                             </tr>
                         {% endfor %}
@@ -124,7 +124,7 @@
         window.scrollTo(0,0)
     })
 </script>
-{% include 'products/includes/quantity_input_script.html' %}
+{#{% include 'products/includes/quantity_input_script.html' %}#}
 
 <script type="text/javascript">
     // Update quantity on click
