--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                     <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-light contact-link" href="#contact">Contact Us</a></li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'view_cart' %}">
+                        <a class="nav-link text-light" href="{% url 'view_bag' %}">
                             <i class="fas fa-shopping-cart"></i> Cart 
                             <span class="badge bg-danger">{{ request.session.cart|length }}</span>
                         </a>
@@ -70,7 +70,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="{% url 'dashboard' %}" class="dropdown-item">My Cart</a>
+                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 {% endif %}
                                 <a href="#" class="dropdown-item">My Profile</a>
                                 <form action="{% url 'logout' %}" method="post" class="dropdown-item">
