--- a/templates/categories/whiskey.html
+++ b/templates/categories/whiskey.html
@@ -36,9 +36,9 @@
             <p class="product-rating"><strong>Rating:</strong> ⭐{{ product.rating|default:"N/A" }}</p>
             <p class="product-price"><strong>Price:</strong> €{{ product.price }}</p>
 
-            <form action="{% url 'add_to_cart' product.id %}" method="POST">
+            <form action="{% url 'add_to_bag' product.id %}" method="POST">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-gold">Add to Cart</button>
+                <button class="add-to-bag-btn">Add to Bag</button>
             </form>
         </div>
     </div>
