--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %} {% load static %} {% block page_header %}
+{% extends "base.html" %}
+{% load bag_tools %}
+{% load static %}
+{% block page_header %}
+
 <div class="container header-container">
   <div class="row">
     <div class="col"></div>
@@ -101,7 +105,7 @@
               >
             </td>
             <td class="py-3">
-              <p class="my-0">€{{ item.product.price|floatformat:2 }}</p>
+                <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
             </td>
           </tr>
           {% endfor %}
