--- a/templates/base.html
+++ b/templates/base.html
@@ -98,9 +98,25 @@
     </div>
 </header>
 
-    {% if messages %}
-        <div class="message-container"></div>
-    {% endif %}
+<div aria-live="polite" aria-atomic="true" class="position-relative">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        {% if messages %}
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        {% endif %}
+    </div>
+</div>
     
     {% block page_header %}{% endblock %}
     {% block content %}{% endblock %}
@@ -162,6 +178,15 @@
     {% endblock %}
     
     {% block postloadjs %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            let toastElements = document.querySelectorAll(".toast");
+            toastElements.forEach((toastEl) => {
+                new bootstrap.Toast(toastEl, { autohide: true, delay: 3000 }).show();
+            });
+        });
+    </script>
+
     <script>
         var swiper = new Swiper(".swiper", {
             effect: "coverflow",
