--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,6 +34,10 @@ header {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
+.login-container{
+    padding-top: 100px;
+}
+
 .main-logo-link {
     display: flex;
     align-items: center;
@@ -356,6 +360,11 @@ h1, h2, h3 {
     text-align: center;
     width: 100%;
     max-width: 400px;
+}
+
+.btn.btn-gold {
+    background-color: gold;
+    color: #000;
 }
 
 .login-box h2 {
