--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,10 @@ header {
     margin-right: 10px;
 }
 
+.container{
+    color: #fff;
+}
+
 /* Navbar */
 .navbar-nav .nav-link {
     font-family: 'Poppins', sans-serif;
@@ -299,6 +303,7 @@ h1, h2, h3 {
 
 /* About Us Section */
 .about {
+    color: #fff;
     text-align: center;
     padding: 50px 20px;
     background: rgba(255, 255, 255, 0.05);
@@ -445,7 +450,6 @@ h1, h2, h3 {
 
 .category-banner {
     width: 100%; 
-    max-height: 600px;
     object-fit: cover; 
     border-radius: 10px; 
     margin-bottom: 20px; 
@@ -457,12 +461,6 @@ h1, h2, h3 {
     margin-bottom: 20px;
 }
 
-.category-banner {
-    width: 100%;
-    height: auto;
-    max-height: 500px;  
-    object-fit: cover;
-}
 
 /* Filter Bar Styling */
 .filter-bar {
@@ -955,9 +953,6 @@ h2.logo-font {
         width: 90%;
     }
 
-    .category-banner {
-        max-height: 1300px; /* Controlled height */
-    }
 
     .features {
     display: flex;
