--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -305,6 +305,7 @@ h1, h2, h3 {
 
 /* About Us Section */
 .about {
+    color: #fff;
     text-align: center;
     padding: 50px 20px;
     background: rgba(255, 255, 255, 0.05);
@@ -421,6 +422,9 @@ h1, h2, h3 {
     text-decoration: underline;
 }
 
+.container{
+    color: #fff;
+}
 
 /* Styles for the product cards*/
 .category-container {
