--- a/static/css/base.css
+++ b/static/css/base.css
@@ -301,6 +301,10 @@ h1, h2, h3 {
     margin-bottom: 20px;
 }
 
+.container {
+    color: #fff;
+}
+
 /* About Us Section */
 .about {
     color: #fff;
@@ -317,6 +321,7 @@ h1, h2, h3 {
     max-width: 800px;
     margin: auto;
 }
+
 
 /* Testimonials */
 .testimonials {
