--- a/staticfiles/checkout/css/checkout.css
+++ b/staticfiles/checkout/css/checkout.css
@@ -65,6 +65,11 @@ select option[value=""] {
     cursor: not-allowed;
 }
 
+.row p {
+    color: #af965e;
+}
+
+
 /* Loading overlay styling */
 #loading-overlay {
     position: fixed;
