Change href for explore more drinks

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -41,7 +41,7 @@
                     <p><strong>Grand Total:</strong> €{{ order.grand_total }}</p>
                 </div>
                 <div class="text-center mt-4">
-                    <a href="{% url 'products' %}?category=gin,vodka,whiskey,wine" class="btn btn-primary rounded-pill px-4 py-2">
+                    <a href="{% url 'home' %}" class="btn btn-primary rounded-pill px-4 py-2">
                         <i class="fas fa-glass-cheers mr-2"></i>Explore More Drinks
                     </a>
                 </div>
