--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
+                            <a href="{% url 'home' %}" class="dropdown-item">Home</a>
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
